fix: button group wrap

--- a/packages/ui/app/src/mdx/components/accordion/index.scss
+++ b/packages/ui/app/src/mdx/components/accordion/index.scss
@@ -1,6 +1,6 @@
 @layer components {
     .fern-accordion {
-        @apply fern-card divide-default mb-6 mt-4 divide-y rounded-lg first:mt-0;
+        @apply fern-card divide-default divide-y rounded-lg m-mdx;
     }
 
     .fern-accordion-item {
